"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2005-12-10	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-71-rename-00-02:
	  Renamed nearly all AST source and header files without
		"art_parser" in the file name.  Had to get this over with.  
	  TODO: documentation, test files, file extensions.


	* ARTXX-00-01-04-main-00-71-rename-00-01:
	  The purpose of this branch is to rename everything 
		from ART to HAC, more importantly, to remove all 
		names and references to "art" or "ART" because of 
		potential name clashes with other packages.  
	  This first revision renamed the ART namespace to HAC.  
	  TODO: AST files, documentation, test files, file extensions.


2005-12-09	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-71:
	  Header check dependency generation scripts updated.
		No files rooted at / are included in the dep files.  
	  Bunch of util library pointer class additions, 
		see util/ChangeLog.  
	  Starting to play around with readline and editline.  
	  HACKT shell works with/out rl/el, and is capable of 
		running system commands by prefixing with '!'.  
		Just like my favorite editor, vi.  
	  TODO: load this baby with some commands!


2005-12-07	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-70:
	  No source change, just revision bump. 
	  Some Makefile.am configurability improvements, 
		able to disable header checking.  


2005-11-12	David Fang		<fangism@users.sourceforge.net>

	* ARTXX-00-01-04-main-00-69:
	  Improved configuration for byacc support.
	  This revision has been validated against byaccj-1.1 (Java-extended),
		bison-1.35, 1.875, 2.0.
	  Makefile.am: clean-ups and re-casing parser cases.
	  Added parser/patch_byacc.awk to fix-up the output
		produced by byacc.  
	  Makefile.am: corrected additional generated source dependencies.