@@ -1,5 +1,5 @@
 # "src/Make.hchk-tail.am"
-#	$Id: Make.hchk-tail.am,v 1.6 2005/12/10 03:56:51 fang Exp $
+#	$Id: Make.hchk-tail.am,v 1.6.2.1 2005/12/11 22:29:25 fang Exp $
 # Makefile footer for enforcing header checks.  
 # Counterpart is "src/Make.hchk-head.am"
 
@@ -92,13 +92,14 @@ HEADER_TCC_DEPBASES = \
 check-headers: $(HEADER_TCC_TESTS)
 	@$(ECHO) All header tests passed.
 
-headers_deps.make: Makefile.am
+# headers_deps.make: $(srcdir)/Makefile.am
+# TODO: generate this in configure instead...
+headers_deps.make: $(srcdir)/Makefile.am
 	@$(ECHO) Regenerating $@ ...
-	@$(ECHO) "# $@ -- generated by rule in Makefile.am" > $@
+	@$(ECHO) "# $@ -- generated by rule in Make.hchk-tail.am" > $@
 	@$(ECHO) "#	(This is not an automake feature, just a custom extension.)" >> $@
 	@$(ECHO) $(HEADER_TCC_DEPBASES) | \
 		$(AWK) -f $(srcdir)/scripts/automake_include.awk >> $@
-
 
 # inlined into Makefile.in by automake
 # really only needed for dynamic dependence-tracking
@@ -129,6 +130,9 @@ clean-header-deps:
 		$(ECHO) "# reset" > \
 			`$(ECHO) $$f | $(SED) 's|[^/]*$$|$(DEPDIR)/&|'` ; \
 	done
+
+echo-header-depbases: force
+	@$(ECHO) $(HEADER_TCC_DEPBASES)
 
 # cvsignore targets
 AUTO_IGNORE += headers_deps.make
