@@ -3,6 +3,14 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "main/version.cc".
 
+2005-12-11	David Fang		<fangism@users.sourceforge.net>
+
+	* ARTXX-00-01-04-main-00-71-rename-00-03:
+	  Failed attempt to configure-generate headers_deps.make.
+		Kept some notes about it.
+	  Updated scripts/automake_include.awk to ignore junk.  
+
+
 2005-12-10	David Fang		<fangism@users.sourceforge.net>
 
 	* ARTXX-00-01-04-main-00-71-rename-00-02:
